[package]
name = "storage_account_list"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["macros"] }
reqwest = "0.11"

# azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust" }
# azure_identity = { git = "https://github.com/Azure/azure-sdk-for-rust" }
# azure_mgmt_storage = { git = "https://github.com/Azure/azure-sdk-for-rust" }

azure_core = { path = "../azure-sdk-for-rust/sdk/core" }
azure_identity = { path = "../azure-sdk-for-rust/sdk/identity" }
azure_mgmt_storage = { path = "../azure-sdk-for-rust/services/mgmt/storage" }

[patch.crates-io]
# https://github.com/serde-rs/serde/pull/1902
serde = { path = "../serde/serde" }
serde_derive = { path = "../serde/serde_derive" }